--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Highlight Digital Card</title>
-<link rel="stylesheet" href="style.css?v=10">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="page-wrap">
+<div class="container">
 
   <!-- HEADER -->
   <div class="header">
@@ -18,13 +18,12 @@
 
   <!-- SEARCH -->
   <div class="search-row">
-    <input id="searchInput" placeholder="Search employees..." />
+    <input id="searchInput" placeholder="Search employee...">
     <button onclick="openEmployee()">Open</button>
-    <button onclick="clearSearch()">Clear</button>
   </div>
 
   <!-- DESKTOP CARD -->
-  <div class="desk-card" id="desktopCard">
+  <div class="desk-card">
 
     <div class="desk-left">
       <h1 id="empName"></h1>
@@ -32,11 +31,11 @@
 
       <div class="divider"></div>
 
-      <div class="info"><span>📞</span><span id="empPhone"></span></div>
-      <div class="info"><span>✉️</span><span id="empEmail"></span></div>
-      <div class="info"><span>🌐</span><span id="empWebsite"></span></div>
+      <div class="info">📞 <span id="empPhone"></span></div>
+      <div class="info">✉️ <span id="empEmail"></span></div>
+      <div class="info">🌐 <span id="empWebsite"></span></div>
 
-      <div class="button-row">
+      <div class="buttons">
         <button onclick="downloadVCard()">Save to Contacts</button>
         <button onclick="openShare()">Send to Phone</button>
       </div>
@@ -53,14 +52,14 @@
 </div>
 
 <!-- SHARE MODAL -->
-<div id="shareModal" class="modal">
+<div id="modal" class="modal">
   <div class="modal-content">
-    <h3>Scan to open on your phone</h3>
-    <img id="qrImage">
+    <h3>Scan to open on phone</h3>
+    <img id="qr">
     <button onclick="closeShare()">Close</button>
   </div>
 </div>
 
-<script src="app.js?v=10"></script>
+<script src="app.js"></script>
 </body>
 </html>
