--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Highlight Digital Card</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="page-wrap">
 
-  <!-- HEADER -->
   <div class="header">
-    <img src="assets/header.png" alt="Highlight Industries" />
+    <img src="assets/header.png" alt="Highlight Industries">
   </div>
 
-  <!-- SEARCH -->
   <div class="search-bar">
-    <input type="text" value="Jessica Flanders" />
+    <input type="text" value="Jessica Flanders">
     <button>Open</button>
     <button>Clear</button>
   </div>
 
-  <!-- CARD -->
   <div class="card">
 
     <div class="desk-left">
