--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <img id="modalQr" class="modal__qr" alt="QR code" />
           </div>
           <div class="modal__row">
+            <div id="modalHint" class="modal__hint"></div>
             <input id="shareLink" class="modal__input" type="text" readonly />
             <button id="copyBtn" class="btn btn--primary" type="button">Copy</button>
           </div>
