--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="loadError" class="loadError" role="status" aria-live="polite"></div>
 
     <main class="stage">
+      <div class="buildBadge">BUILD 1001</div>
 
       <!-- Desktop layout -->
       <section class="card" aria-label="Contact card">
