--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Highlight Digital Contact</title>
 
   <link rel="icon" href="./assets/header.png" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.css?v=47">
   <meta name="theme-color" content="#3F845B" />
 </head>
 
@@ -162,6 +162,6 @@ first,last,title,phone,ext,email,website,photo,parts_label,parts_url,slug
 Taryne,Swayze,Packaging Engineer,616-531-2464,242,taryns@highlightindustries.com,https://www.highlightindustries.com,,Machine Parts,https://www.highlightindustries.net,taryne-swayze
 Jessica,Flanders,E‑commerce & Inventory Administrator,616-531-2464,000,jessica@highlightindustries.com,https://www.highlightindustries.com,./assets/headshots/jessica.png,Machine Parts,https://www.highlightindustries.net,jessica-flanders
 </script>
-  <script defer src="./app.js"></script>
+  <script defer src="./app.js?v=47"></script>
 </body>
 </html>
